# hypodensity

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  THIRD_PARTY_NOTICES  pyproject.toml
.github/workflows/: ci.yml  test.yml
src/dicomutils/: dicomutils.py  imageutils.py
src/ncct_utils/: csf_segmentation_pytorch.py  ncct_paths.py  rNCCTfunctions.py  rncct_config.py  rncct_process.py
src/ncct_utils/resources/: 2dtrans_ident.txt  3dtrans_ident.txt  affineDTI_template.txt  affine_transform_template.txt  last_weights.h5
src/regutils/: simpleelastix_utils.py
src/regutils/data/: 3dxfmtemplate.txt  MUTUAL.txt  MUTUAL4.txt  MUTUAL4_custom.txt  affineDTI.txt  affine_crosscorelation_test.txt  crosscorr_D3.txt  crosscorr_hires.txt  crosscorr_wider.txt  gradient_align.txt  rigid.txt
src/scripts/: run_performance_cases.py  run_rncct.py  sim_lesion.py  summarize_performance.py
test/: conftest.py  test_pipeline_artifacts.py
test/data/SIM/: SIM.tar.zstd
