[project]
name = "hypodensity"
dynamic = ["version"]
description = "Non-contrast CT hypodensity quantification relative to the contralateral mirror region"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Soren Christensen", email = "sc@cercare-medical.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
    "datargs>=1.1.0",
    "h5py>=3.15.1",
    "imageio>=2.37.2",
    "itk-elastix>=0.24.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=12.0.0",
    "pydicom>=3.0.1",
    "scipy>=1.15.3",
    "simpleitk>=2.5.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/sorenchr2011/hypodensity"

[project.scripts]
run_rncct = "scripts.run_rncct:main"
run_performance_cases = "scripts.run_performance_cases:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]


[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = true
exclude = [
  "(^|/)\\.idea/",
  "(^|/)__pycache__/",
  "\\.bak$",
  "\\.delete$",
]


[tool.setuptools.package-data]
ncct_utils = [
  "resources/scct_unsmooth_RAI_C.nii.gz",
  "resources/erodedmask_RAI_C.nii.gz",
  "resources/template_mask_RAI_C.nii.gz",
  "resources/affine_transform_template.txt",
  "resources/affineDTI_template.txt",
  "resources/last_weights.h5"
]
dicomutils = [
  "data/*txt"
]
regutils = [
  "data/*txt"
]

[tool.uv.sources]
dep-dicomutils = { path = "./src/dicomutils/" }
dep-ncct_utils = { path = "./src/ncct_utils/" }
dep-regutils = { path = "./src/regutils/" }


[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "ruff",
  "pytest",
  "mypy"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"


[dependency-groups]
dev = [
  "black>=25.9.0",
  "coverage>=7.13.4",
  "isort>=7.0.0",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "ruff>=0.15.1",
  "setuptools>=80.9.0",
  "setuptools-scm>=9.2.2",
]


[tool.setuptools_scm]
write_to = "src/ncct_utils/_version.py"
write_to_template = "__version__ = {version!r}"


[tool.ruff]
target-version = "py310"
extend-exclude = ["**/.idea/**", "**/__pycache__/**", "*.bak", "*.delete"]

[tool.ruff.lint]
extend-select = ["B"]
